@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

skinparam classAttributeIconSize 0

'left to right direction

class Skill {
    - String name

    + Skill(name)
    + validateSkill(skill)
}

class HumanResourcesManager {
    - name
    + HumanResourcesManager(name)
}

class SkillRepository {
    - addSkill(skill)
    - isSkillInList(skill)
    + registerSkill(name)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getSkillRepository()
}

class RegisterSkillController {
    + RegisterSkillController()
    + registerSkill(name)
}

class RegisterSkillUI {
}

RegisterSkillUI ..> RegisterSkillController
RegisterSkillController ..> Repositories
RegisterSkillController ..> SkillRepository
RegisterSkillController ..> Skill
Repositories --> SkillRepository
HumanResourcesManager --> Skill
SkillRepository --> Skill



@enduml